release 1.0.2 (2009-01/02)
- Support the setting of a javax.ws.rs.core.SecurityContext implementation
  on com.sun.jersey.spi.container.ContainerRequest. This allows implementations,
  such as a request filter, to override the supply authorization logic in
  combination with the @RolesAllowed annotation and the
  com.sun.jersey.api.container.filter.RolesAllowedResourceFilterFactory.
- Fixed issue 160
  https://jersey.dev.java.net/issues/show_bug.cgi?id=160
  Added support for setting HTTPS properties (HostnameVerifier and SSLContext)
  when the Jersey Client with HttpsURLConnection. See JavaDoc of:
    com.sun.jersey.client.urlconnection.HTTPSProperties
- Added support when using the Jersey client for a factory to create
  HttpURLConnection or HttpsURLConnection. See JavaDoc of:
    com.sun.jersey.client.urlconnection.URLConnectionClientHandler
    com.sun.jersey.client.urlconnection.HttpURLConnectionFactory
- Fixed issue 80
  https://jersey.dev.java.net/issues/show_bug.cgi?id=80
  The class and package registration mechanisms for root resource classes
  and providers works correctly on the JBoss 5.x app server.
- The ResourceDoclet (generating a resourcedoc file for extended WADL) moved
  from the maven-wadl-plugin to the wadl-resourcedoc-doclet module. If you're
  using extended wadl you need to change the docletArtifact/artifactId of the
  maven-javadoc-plugin configuration from maven-wadl-plugin to 
  wadl-resourcedoc-doclet.
- Include Jersey Client API with Apache HTTP client.
  Refer to the module:
        <groupId>com.sun.jersey.contribs</groupId>
        <artifactId>jersey-apache-client</artifactId>
- Fixed issue 177
  https://jersey.dev.java.net/issues/show_bug.cgi?id=177
  The method Client.getProviders() can be used to get the Providers instance
  utilized by the client.
- Fixed issue 183
  https://jersey.dev.java.net/issues/show_bug.cgi?id=183
  Query parameters may be built for a WebResource as follows: