@@ -1,4 +1,9 @@
 release 1.0.2 (2009-01/02)
+- Fixed issue 180
+  https://jersey.dev.java.net/issues/show_bug.cgi?id=180
+  Support JSON with Padding.
+  See JavaDoc for:
+    com.sun.jersey.api.json.JSONWithPadding
 - Support the setting of a javax.ws.rs.core.SecurityContext implementation
   on com.sun.jersey.spi.container.ContainerRequest. This allows implementations,
   such as a request filter, to override the supply authorization logic in
